--- a/presentation/index.html
+++ b/presentation/index.html
@@ -81,7 +81,7 @@
                                     microroptor
                                 </a>
                                 <br />
-                                Auteur: <a target="_blank" href="https://twitter.com/Cryptanalyse">Cryptanalyse</a>
+                                Auteur: <a target="_blank" href="https://x.com/Cryptanalyse">Cryptanalyse</a>
                             </p>
                         </div>
                     </div>
